<resources>
    <string name="app_name">Navigator</string>
    <string name="title_home">Home</string>
    <string name="title_Navigation">Navigation</string>
    <string name="title_search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_settings">Settings</string>
    <string name="google_maps_api">AIzaSyB-5LEB4nrRNI1EG8yi3VSbIRltX_o6gow</string>
    <string name="InputLocName">Name Location</string>
    <string name="ConfirmLocName">Set</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="searchbar">Search a place</string>
    <string name="language">Language:</string>
    <string name="SuccessfulSaved">Successful Saved Place</string>
    <string name="PleaseInput">Please input a name</string>
    <string name="SuccessfulDeleted">Successful Deleted Place</string>
    <string name="SuccessfulEdited">Successful Edited Place</string>
    <string name="AlreadyExists">Name Already Exists</string>
    <string name="my_saved_places">My Saved Places</string>
    <string name="updated">Updated:</string>
    <string name="dark_mode">Dark mode:</string>
    <string name="apply_changes">Apply changes</string>
    <string name="enable_play_music">Enable \'Play Music\':</string>
    <string name="show_temperature">Show temperature:</string>
</resources>
